2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/model/Model.cpp, src/components/ogre/model/Model.h, src/components/ogre/model/ModelDefinition.cpp, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/XMLModelDefinitionSerializer.cpp, src/components/ogre/model/XMLModelDefinitionSerializer.h: allow models to be arbitrarily rotated, instead of just around the z-axis. The format allows for either radians or degrees to be specified.
    * src/components/ogre/modeldefinitions/buildingelements.modeldef.xml, src/components/ogre/modeldefinitions/creatures.modeldef.xml, src/components/ogre/modeldefinitions/items.modeldef.xml, src/components/ogre/modeldefinitions/modeldefinition.xsd, src/components/ogre/modeldefinitions/trees.modeldef.xml: modified the rotation specification

2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/TerrainEditor.cpp: added some nice casts, rearranged some exception catching

2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/ogre.cfg: update the config to work with Ogre 1.2

2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: use the ground texture from 3d_objects
	
2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/model/XMLModelDefinitionSerializer.cpp: make sure that paths are correctly separated
    
2006-04-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.cpp, src/components/ogre/EmberOgre.h: allow the home directory of ember to be set on the command line

2006-04-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/Bootstrap.lua: added comments

2006-04-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp, src/services/config/ConfigService.h: added ability to set a different home directory than the default

2006-04-11 Erik Hjortsberg  <erik@katastrof.nu>
